# opendata-bj-mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test_get.py
.github/workflows/: ci.yml
skills/opendata-bj/: SKILL.md
src/opendata_bj/: cache.py  server.py  skill.md
src/opendata_bj/client/: portal.py  rate_limiter.py
src/opendata_bj/config/: __init__.py  constants.py  headers.py
src/opendata_bj/models/: dataset.py  resource.py
src/opendata_bj/tools/: __init__.py  admin.py  datasets.py  preview_handlers.py
src/opendata_bj_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cache.py
tests/client/: test_portal.py  test_rate_limiter.py
tests/manual/: test_real_server.py
tests/tools/: test_admin.py  test_download_dataset.py  test_mcp_tools.py  test_preview_download.py  test_preview_handlers.py
