[project]
name = "opendata-bj-mcp"
version = "0.1.0"
description = "MCP Server for Benin OpenData Portal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
excel = ["pandas>=2.0", "openpyxl>=3.1"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.3"]

[project.urls]
Homepage = "https://github.com/VynoDePal/opendata-bj-mcp"
Repository = "https://github.com/VynoDePal/opendata-bj-mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore = ["manual"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
